CSS/mobile.css
.mobile-only {
  display: none;
}

.desktop-only {
  display: block;
}

#mobile-menu {
  background-color: #A00;
  height: 45px;
}

@media only screen and (max-width: 707px) {
  body {
    font-size: 130%;
  }

  .mobile-text-center {
    text-align: center !important;
  }

  .mobile-text-left {
    text-align: left !important;
  }

  .mobile-text-right {
    text-align: right !important;
  }

  .column-left {
    display: block !important;
    float: none !important;
    width: 90% !important;
    margin: 0 auto !important;
  }

  .column-right {
    display: block !important;
    float: none !important;
    width: 90% !important;
    margin: 0 auto !important;
  }

  .column-center {
    display: block !important;
    width: 90% !important;
    float: none !important;
    margin: 0 auto !important;
  }

  .mobile-column-left {
    display: block;
    float: left;
    margin-left: 5px;
    margin-right: 5px;
  }

  .mobile-column-right {
    display: block;
    float: right;
    margin-left: 5px;
    margin-right: 5px;
  }

  .mobile-column-center {
    display: block;
    margin-left: 5px;
    margin-right: 5px;
    margin: 0 auto;
  }

  .mobile-only {
    visibility: visible !important;
    display: block !important;
  }

  .desktop-only {
    visibility: collapse !important;
    display: none !important;
  }

  .mobile-text-center {
    text-align: center !important;
  }

  .no-mobile-margin {
    margin: 0 0 !important;
  }

  .no-mobile-padding {
    padding: 0px !important;
  }

  .mobile-width-full {
	  width: 100% !important;
  }
}

